--- a/modification.html
+++ b/modification.html
@@ -351,29 +351,23 @@ create_graph(
 <img src="img/adding-several-new-nodes-to-a-graph-2.png" class="img-responsive center-block"></code></pre>
                     </div>
                     <h2 id="adding-several-new-nodes-to-or-from-a-selection-of-nodes">Adding Several New Nodes to or from a Selection of Nodes</h2>
-                    <p>Add a number of nodes to the graph by attaching them to (<code>add_n_nodes_to_selection()</code>) or from (<code>add_n_nodes_from_selection()</code>) a selection of nodes. The nodes created can be assigned a common value for their <code>type</code> attribute.</p>
+                    <p>Add a number of nodes to the graph by attaching them to or from a selection of nodes with <code>add_n_nodes_ws()</code>. The nodes created can be assigned a common value for their <code>type</code> attribute.</p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
-                            <img src="img/graph-functions/add_n_nodes_from_selection_2x.png" class="img-responsive center-block">
+                            <img src="img/graph-functions/add_n_nodes_ws_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
-                        <div>
-                            <img src="img/graph-functions/add_n_nodes_to_selection_2x.png" class="img-responsive center-block">
-                        </div>
-                        <div>
-                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
-                        </div>
-                    <p>It's occasionally convenient to select one or more nodes and then add several nodes to or from them. Any use of <code>add_n_nodes_from_selection()</code> or <code>add_n_nodes_to_selection()</code> requires a selection of one or more nodes in the graph and this can be done with either of the node selection functions (e.g., <code>select_nodes()</code>, <code>select_nodes_by_degree()</code>, etc.). Both functions have <code>set_node_type</code> and <code>set_edge_rel</code> arguments, which allow you to optionally provide a common value for either the node <code>type</code> or for the edge <code>rel</code> type for all new nodes and edges created through this function call.</p>
+                    <p>It's occasionally convenient to select one or more nodes and then add several nodes to or from them. Any use of <code>add_n_nodes_ws()</code> requires a selection of one or more nodes in the graph (all functions ending with <code>_ws</code> indicate the use of a node or edge selection). This selection of nodes can be made with a variety of node selection functions (e.g., <code>select_nodes()</code>, <code>select_nodes_by_degree()</code>, etc.) or through a traversal function (e.g., <code>trav_out</code>, <code>trav_in_node</code>, etc.). The direction in which edges travel is specified in the <code>direction</code> argument. Using <code>from</code> will direct the edges from the selected node(s) to the new nodes. With <code>from</code>, edges will be made in the the opposite direction.</p>
+                    <p>This function has <code>set_node_type</code> and <code>set_edge_rel</code> arguments, which allow you to optionally provide a common value for either the node <code>type</code> or for the edge <code>rel</code> type for all new nodes and edges created through this function call.</p>
                     <div>
                         <pre><code class="prettyprint">###
 # Add several nodes with different
 # `type` attributes to the graph
-# with `add_n_nodes_from_selection()`
-# and `add_n_nodes_to_selection()`
+# with `add_n_nodes_ws()`
 ###
 
 library(DiagrammeR)
@@ -383,14 +377,15 @@ library(magrittr)
 # node and multiples of children nodes
 create_graph(
   graph_attrs = "output = visNetwork") %>%
-  add_node("A") %>% select_nodes %>%
-  add_n_nodes_from_selection(3, "B") %>%
+  add_node("A") %>%
+  select_nodes %>%
+  add_n_nodes_ws(3, "from", "B") %>%
   clear_selection %>%
   select_nodes("type", "B") %>%
-  add_n_nodes_from_selection(3, "C") %>%
+  add_n_nodes_ws(3, "from", "C") %>%
   clear_selection %>%
   select_nodes("type", "C") %>%
-  add_n_nodes_from_selection(3, "D") %>%
+  add_n_nodes_ws(3, "from", "D") %>%
   render_graph
 
 <img src="img/adding-several-new-nodes-to-or-from-a-selection-of-nodes-1.png" class="img-responsive center-block">
@@ -398,14 +393,15 @@ create_graph(
 # Create a graph with two central
 # nodes with a high indegree and
 # outdegree
-create_graph(graph_attrs =
-               "output = visNetwork") %>%
-  add_n_nodes(2, "A") %>% add_edge(1, 2) %>%
+create_graph(
+  graph_attrs = "output = visNetwork") %>%
+  add_n_nodes(2, "A") %>%
+  add_edge(1, 2) %>%
   select_nodes_by_id(1) %>%
-  add_n_nodes_to_selection(10, "B") %>%
+  add_n_nodes_ws(10, "to", "B") %>%
   clear_selection %>%
   select_nodes_by_id(2) %>%
-  add_n_nodes_from_selection(10, "C") %>%
+  add_n_nodes_ws(10, "from", "C") %>%
   render_graph
 
 <img src="img/adding-several-new-nodes-to-or-from-a-selection-of-nodes-2.png" class="img-responsive center-block">
@@ -413,21 +409,22 @@ create_graph(graph_attrs =
 # Create a graph in the same
 # manner but add relationships
 # and other attributes
-create_graph(graph_attrs =
-               "output = visNetwork") %>%
-  add_n_nodes(1, "A") %>% select_last_node %>%
-  set_node_attr_with_selection("value", 5) %>%
-  add_n_nodes_to_selection(3, "B", "toward") %>%
+create_graph(
+  graph_attrs = "output = visNetwork") %>%
+  add_n_nodes(1, "A") %>%
+  select_last_node %>%
+  set_node_attrs_ws("value", 5) %>%
+  add_n_nodes_ws(3, "to", "B", "toward") %>%
   clear_selection %>%
   select_nodes("type", "B") %>%
-  set_node_attr_with_selection("value", 4) %>%
-  add_n_nodes_from_selection(3, "C", "away") %>%
+  set_node_attrs_ws("value", 4) %>%
+  add_n_nodes_ws(3, "from", "C", "away") %>%
   clear_selection %>%
   select_nodes("type", "C") %>%
-  set_node_attr_with_selection("value", 3) %>%
-  add_n_nodes_to_selection(5, "D", "toward") %>%
+  set_node_attrs_ws("value", 3) %>%
+  add_n_nodes_ws(5, "to", "D", "toward") %>%
   select_nodes("type", "D") %>%
-  set_node_attr_with_selection("value", 2) %>%
+  set_node_attrs_ws("value", 2) %>%
   render_graph
 
 <img src="img/adding-several-new-nodes-to-or-from-a-selection-of-nodes-3.png" class="img-responsive center-block"></code></pre>
