--- a/deposit_values.html
+++ b/deposit_values.html
@@ -82,7 +82,7 @@
                       <a href="modification.html">Modification</a>
                     </li>
                     <li class="active">
-                      <a href="deposit_values.html">Deposits</a>
+                      <a href="cache_values.html">Caches</a>
                     </li>
                     <li>
                       <a href="graph_series.html">Series</a>
@@ -102,55 +102,33 @@
         <div class="row">
             <div class="col-md-9" role="main">
                 <div class="bs-docs-section">
-                    <h1 id="depositing-values" class="page-header">Depositing Values</h1>
+                    <h1 id="caching-values" class="page-header">Caching Values</h1>
                     <p class="lead">Storing values can be useful thing, especially in the context of traversals through a graph.</p>
-                    <h2 id="depositing-node-or-edge-attribute-values">Depositing Node or Edge Attribute Values</h2>
+                    <h2 id="caching-node-or-edge-attribute-values">Caching Node or Edge Attribute Values</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
-                            <img src="img/graph-functions/deposit_node_attr_2x.png" class="img-responsive center-block">
+                            <img src="img/graph-functions/cache_node_attrs_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
-                            <img src="img/graph-functions/deposit_edge_attr_2x.png" class="img-responsive center-block">
+                            <img src="img/graph-functions/cache_edge_attrs_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
-                            <img src="img/graph-functions/deposit_node_attr_from_selection_2x.png" class="img-responsive center-block">
+                            <img src="img/graph-functions/cache_node_attrs_ws_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
-                            <img src="img/graph-functions/deposit_edge_attr_from_selection_2x.png" class="img-responsive center-block">
-                        </div>
-                        <div>
-                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
-                        </div>
-                    <p></p>
-                    <div>
-                        <pre><code class="prettyprint">
-</code></pre>
-                    </div>
-                    <h2 id="depositing-node-or-edge-counts">Depositing Node or Edge Counts</h2>
-                    <p></p>
-                        <div>
-                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
-                        </div>
-                        <div>
-                            <img src="img/graph-functions/deposit_node_count_in_selection_2x.png" class="img-responsive center-block">
-                        </div>
-                        <div>
-                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
-                        </div>
-                        <div>
-                            <img src="img/graph-functions/deposit_edge_count_in_selection_2x.png" class="img-responsive center-block">
+                            <img src="img/graph-functions/cache_edge_attrs_ws_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -160,13 +138,35 @@
                         <pre><code class="prettyprint">
 </code></pre>
                     </div>
-                    <h2 id="using-the-deposited-values">Using the Deposited Values</h2>
+                    <h2 id="caching-node-or-edge-counts">Caching Node or Edge Counts</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
-                            <img src="img/graph-functions/withdraw_values_2x.png" class="img-responsive center-block">
+                            <img src="img/graph-functions/cache_node_count_ws_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/cache_edge_count_ws_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
+                    <p></p>
+                    <div>
+                        <pre><code class="prettyprint">
+</code></pre>
+                    </div>
+                    <h2 id="using-the-cached-values">Using the Cached Values</h2>
+                    <p></p>
+                        <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/get_cache_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -181,11 +181,11 @@
                 <nav class="bs-docs-sidebar hidden-print hidden-xs hidden-sm">
                     <ul class="nav bs-docs-sidenav">
                         <li>
-                            <a href="#depositing-values">Depositing Values</a>
+                            <a href="#caching-values">Caching Values</a>
                             <ul class="nav">
-                                <li><a href="#depositing-node-or-edge-attribute-values">Depositing Node or Edge Attribute Values</a></li>
-                                <li><a href="#depositing-node-or-edge-counts">Depositing Node or Edge Counts</a></li>
-                                <li><a href="#using-the-deposited-values">Using the Deposited Values</a></li>
+                                <li><a href="#caching-node-or-edge-attribute-values">Caching Node or Edge Attribute Values</a></li>
+                                <li><a href="#caching-node-or-edge-counts">Caching Node or Edge Counts</a></li>
+                                <li><a href="#using-the-cached-values">Using the Cached Values</a></li>
                             </ul>
                         </li>
                     </ul>
