Modify navbar link

--- a/graph_series.html
+++ b/graph_series.html
@@ -82,7 +82,7 @@
                       <a href="modification.html">Modification</a>
                     </li>
                     <li>
-                      <a href="deposit_values.html">Deposits</a>
+                      <a href="cache_values.html">Caches</a>
                     </li>
                     <li class="active">
                       <a href="graph_series.html">Series</a>
