--- a/inspection.html
+++ b/inspection.html
@@ -157,8 +157,7 @@ nodes &lt;-
     type = c(rep("a_to_g", 7),
              rep("h_to_p", 9),
              rep("q_to_x", 8),
-             rep("y_and_z",2))
-  )
+             rep("y_and_z",2)))
 
 # Create an EDF
 edges &lt;-
@@ -166,15 +165,13 @@ edges &lt;-
     from = sample(LETTERS, replace = TRUE),
     to = sample(LETTERS, replace = TRUE),
     label = "edge",
-    rel = "letter_to_letter"
-  )
+    rel = "letter_to_letter")
 
 # Create a graph object
 graph &lt;-
   create_graph(
     nodes_df = nodes,
-    edges_df = edges,
-  )
+    edges_df = edges)
 
 # Use the `node_info()` function, returning a data
 # frame with information on the graph's nodes
@@ -233,8 +230,7 @@ nodes &lt;-
     type = c(rep("a_to_g", 7),
              rep("h_to_p", 9),
              rep("q_to_x", 8),
-             rep("y_and_z",2))
-  )
+             rep("y_and_z",2)))
 
 # Create an EDF
 edges &lt;-
@@ -242,15 +238,13 @@ edges &lt;-
     from = sample(LETTERS, replace = TRUE),
     to = sample(LETTERS, replace = TRUE),
     label = "edge",
-    rel = "letter_to_letter"
-  )
+    rel = "letter_to_letter")
 
 # Create a graph object
 graph &lt;-
   create_graph(
     nodes_df = nodes,
-    edges_df = edges,
-  )
+    edges_df = edges,)
 
 # Verify that node with ID `a` is not in graph with
 # the `node_present()` function (it won't be because
@@ -315,8 +309,7 @@ nodes &lt;-
     type = c(rep("a_to_g", 7),
              rep("h_to_p", 9),
              rep("q_to_x", 8),
-             rep("y_and_z",2))
-  )
+             rep("y_and_z",2)))
 
 # Create an EDF
 edges &lt;-
@@ -324,15 +317,13 @@ edges &lt;-
     from = sample(LETTERS, replace = TRUE),
     to = sample(LETTERS, replace = TRUE),
     label = "edge",
-    rel = "letter_to_letter"
-  )
+    rel = "letter_to_letter")
 
 # Create a graph object
 graph &lt;-
   create_graph(
     nodes_df = nodes,
-    edges_df = edges,
-  )
+    edges_df = edges)
 
 # Use the `get_nodes()` function to return node ID
 # values
@@ -439,8 +430,7 @@ nodes &lt;-
     type = c(rep("a_to_g", 7),
              rep("h_to_p", 9),
              rep("q_to_x", 8),
-             rep("y_and_z",2))
-  )
+             rep("y_and_z",2)))
 
 # Create an EDF
 edges &lt;-
@@ -448,15 +438,13 @@ edges &lt;-
     from = sample(LETTERS, TRUE),
     to = sample(LETTERS, TRUE),
     label = "edge",
-    rel = "letter_to_letter"
-  )
+    rel = "letter_to_letter")
 
 # Create a graph object
 graph &lt;-
   create_graph(
     nodes_df = nodes,
-    edges_df = edges,
-  )
+    edges_df = edges)
 
 # If there are no predecessors,
 # `NA` is returned
@@ -528,9 +516,10 @@ library(magrittr)
 
 # Show the NDF from a randomly
 # created graph
-create_random_graph(5, 10,
-                    directed = TRUE,
-                    set_seed = 20) %>%
+create_random_graph(
+  5, 10,
+  directed = TRUE,
+  set_seed = 20) %>%
   get_node_df
 #>   nodes type label value
 #> 1     1          1     9
@@ -542,11 +531,13 @@ create_random_graph(5, 10,
 # Take this a step further and
 # get the mean value from the
 # `value` node attribute
-create_random_graph(5, 10,
-                    directed = TRUE,
-                    set_seed = 20) %>%
-  get_node_df %>% .$value %>%
-  as.numeric %>% mean
+create_random_graph(
+  5, 10,
+  directed = TRUE, set_seed = 20) %>%
+  get_node_df %>%
+  .$value %>%
+  as.numeric %>%
+  mean
 #> [1] 7.1
 
 # An empty graph doesn't have an
@@ -567,10 +558,11 @@ create_random_graph(5, 0) %>%
 # is hardly different from getting
 # an NDF. Get the 'head' of the
 # graph's EDF
-create_random_graph(5, 10,
-                    directed = TRUE,
-                    set_seed = 20) %>%
-  get_edge_df %>% .[1:5,]
+create_random_graph(
+  5, 10,
+  directed = TRUE, set_seed = 20) %>%
+  get_edge_df %>%
+  .[1:5,]
 #> from to rel
 #> 1    5  1
 #> 2    1  3
@@ -614,8 +606,7 @@ nodes &lt;-
     type = c(rep("a_to_g", 7),
              rep("h_to_p", 9),
              rep("q_to_x", 8),
-             rep("y_and_z",2))
-  )
+             rep("y_and_z",2)))
 
 # Create an EDF
 edges &lt;-
@@ -625,15 +616,13 @@ edges &lt;-
     to = sample(LETTERS,
                 replace = TRUE),
     label = "edge",
-    rel = "letter_to_letter"
-  )
+    rel = "letter_to_letter")
 
 # Create a graph object
 graph &lt;-
   create_graph(
     nodes_df = nodes,
-    edges_df = edges,
-  )
+    edges_df = edges,)
 
 # Get counts of nodes grouped by
 # the `type` attribute
@@ -701,7 +690,7 @@ is_graph_directed(graph)
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
-                            <img src="img/graph-functions/get_global_graph_attr_2x.png" class="img-responsive center-block">
+                            <img src="img/graph-functions/get_global_graph_attrs_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
